--- a/data/server.properties
+++ b/data/server.properties
@@ -6,7 +6,7 @@ enable-command-block=false
 enable-query=false
 generator-settings={}
 enforce-secure-profile=true
-level-name=monga
+level-name=world
 motd=\u00A72MINECRAFT MONGA\u00A7r\n\u00A74Save Monga V1.0
 query.port=25565
 pvp=true
